Fixed background color of navigation (light and dark mode)

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -119,7 +119,7 @@
   display: flex;
   justify-content: space-around;
   width: 100%;
-  background-color: white;
+  background-color: rgb(var(--background-start-rgb));
 }
 
 /* Enable hover only on non-touch devices */
